vessels/send/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: send
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`send.super.fish`)
      kind: Rule
      priority: 10
      services:
        - kind: Service
          name: send
          port: http
          scheme: http
  tls:
    secretName: send.super.fish
